--- a/package.json
+++ b/package.json
@@ -106,5 +106,8 @@
   "lint-staged": {
     "*.{js,ts}": "eslint --fix"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "resolutions": {
+    "form-data": "4.0.4"
+  }
 }
