--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,17 +1,12 @@
 {
 	"node-option": [
 		"no-warnings",
-		"loader=ts-node/esm"
+		"import=tsx"
 	],
 	"extensions": [
 		"ts",
 		"tsx"
 	],
 	"spec": "tests/unit/**/*.spec.ts",
-	"reporter": "list",
-	"node-env": {
-		"TS_NODE_PROJECT": "./tsconfig.test.json",
-		"TS_NODE_TRANSPILE_ONLY": "true",
-		"TS_NODE_ESM": "true"
-	}
+	"reporter": "list"
 }
