--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/nunjucks": "^3.2.6",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "c8": "^10.1.3",
@@ -99,6 +100,7 @@
     "sinon": "^21.0.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "husky": {
