--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^5.1.5",
-    "axios": "^1.11.0",
+    "axios": "1.12.0",
     "body-parser": "^2.2.0",
     "chalk": "^5.5.0",
     "compression": "^1.8.1",
